{{$NEXT}}

0.033     2012-03-15 06:55:39 America/Los_Angeles

     Bug Fixes:

     Corrected documentation about the environment variable
     controlling the default location of the repository.
     Thanks fibo.

     The index file is now properly updated after doing an
     import operation.  Thanks throughnothing.

0.032     2012-03-01 10:36:25 America/Los_Angeles

     Bug Fixes:

     Worked around a problem that caused the PAUSE indexer to
     reject the last release.

     Added an accurate line-count to the 02packages file so that
     cpan(1) doesn't complain about it.

0.031     2012-02-28 05:19:58 America/Los_Angeles

     Bug Fixes:

     Fixed bug in the create command.  Not sure how this ever
     worked before.

     New Features:

     The "add" command now recursively imports all the dependencies
     by default.  To disable this behavior use the --norecurse option.

0.030     2012-01-26 22:00:32 America/Los_Angeles

     The --repos option for pinto-admin has been officially 
     renamed to --root.  This was done to create a symmetrical
     API between Pinto and Pinto::Admin.  The old --repos option
     will *not* be supported for backward compatibility.

0.029     2011-12-15 00:24:11 America/Los_Angeles

     The 'list' command now has --index and --noindex options to
     filter the output to packages that are in the index, or not
     in the index, respectively.

     The 'list' command now has --pinned and --nopinned options to
     filter the output to packages that are pinned, or not pinned,
     respectively.

     The default output format for the 'list' command now includes a
     '+' character to indicate whether a package is pinned.

     Some improvements to Pinto::Store::VCS::Git, which allow you
     to place your Pinto repository anywhere inside a Git repository.
 
0.028     2011-12-12 01:22:02 America/Los_Angeles

     I discovered that Subversion 1.7 changed the working copy layout