@@ -109,9 +109,11 @@ or ";") will be ignored.
 
 =item --author=NAME
 
-Sets your identity as a distribution author.  The NAME can only be
-alphanumeric characters only (no spaces) and will be forced to
-uppercase.  The default is your username.
+Sets your identity as a distribution author.  The C<NAME> must be
+alphanumeric characters (no spaces) and will be forced to uppercase.
+Defaults to the C<user> specified in your C<~/.pause> configuration
+file (if such file exists).  Otherwise, defaults to your current login
+username.
 
 =item --message=MESSAGE
 
